Sun Jan  9 17:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/lib/Server_Logging_Handler_T.{h,cpp}:
          Fixed unicode compile errors

Sun Jan  9 12:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/IOStream/client/iostream_client.cpp:
        * examples/IOStream/server/iostream_server.cpp:
        * examples/IPC_SAP/TLI_SAP/CPP-ATM-client.cpp:
        * examples/IPC_SAP/TLI_SAP/CPP-ATM-server.cpp:
        * examples/OS/process/process.cpp:
          Fixed unicode link errors

Sun Jan  9 12:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Connection/non_blocking/test_lsock_connector.cpp:
        * examples/Connection/non_blocking/test_spipe_acceptor.cpp:
        * examples/Connection/non_blocking/test_spipe_connector.cpp:
        * examples/Connection/non_blocking/test_tli_acceptor.cpp:
        * examples/Connection/non_blocking/test_tli_connector.cpp:
          Fixed unicode link errors

Sun Jan  9 11:18:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Unbounded_Set_Test.cpp:
          Removed test for bug 1460, it is just not safe to remove the element
          the iterator points to, always move the iterator first forward
          and then remove the element.

Sat Jan  8 14:50:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/server.mpb:
          Removed this file, name is just too generic, use taoserver for
          TAO servers that have taoexe and portableserver as base project
          and server as exename

Fri Jan  7 21:04:44 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* include/makeinclude/wrapper_macros.GNU:

          Added the required path settings for SSL.

Fri Jan  7 18:23:19 2005  Steve Huston  <shuston@riverace.com>

	* configure.ac: Corrected the check for ACE_HAS_CONFLICTING_XTI_MACROS.
	  We're checking for a conflict of macros from other places. The