@@ -1,3 +1,9 @@
+Sun Jan  9 17:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * examples/System_V_IPC/SV_Semaphores/Semaphores_1.cpp:
+        * examples/System_V_IPC/SV_Semaphores/Semaphores_2.cpp:
+          Fixed unicode compile errors
+
 Sun Jan  9 17:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * netsvcs/lib/Server_Logging_Handler_T.{h,cpp}:
